@@ -1,4 +1,5 @@
 * 0.11.1 (unreleased)
+   * Point defense won't shoot at disabled pilots anymore
    * Fixed many typos
    * Translation updates
 
